Applied review feedback